force-app/main/default/objects/custom_create221__c/custom_create221__c.object-meta.xml
<CustomObject>
    <label>Custom created object221</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects221</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>