force-app/main/default/objects/custom_create221__c/fields/custom_create_221field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_221field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 221field541</label>
    <type>Checkbox</type>
</CustomField>