force-app/main/default/objects/custom_create221__c/fields/custom_create_221field663__c.field-meta.xml
<CustomField>
    <fullName>custom_create_221field663__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 221field663</label>
    <type>Checkbox</type>
</CustomField>